--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,8 @@
 ---
 roles:
     - name: geerlingguy.security
+      version: 2.0.0
     - name: geerlingguy.ntp
+      version: 2.0.1
     - name: geerlingguy.munin-node
+      version: 1.3.0
