--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,10 @@
 ---
 roles:
+    - name: ansible.posix
+      version: 1.3.0
     - name: geerlingguy.security
-      version: 2.0.0
+      version: 2.1.0
     - name: geerlingguy.ntp
-      version: 2.0.1
+      version: 2.3.1
     - name: geerlingguy.munin-node
       version: 1.3.0
