Use custom ansible_managed message

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,5 +5,7 @@ fact_caching = yaml
 fact_caching_connection = tmp
 nocows = 1
 
+ansible_managed = Managed by srcf-ansible, changes liable to be overwritten
+
 [ssh_connection]
 pipelining = True
