Separate some srcf.base tasks out to srcf.server
This allows srcf.base to be reused for creating SRCF-hosted machines
that are not "SRCF machines" (i.e. they are used by some other tenant
user, but benefit from some common configuration).

--- a/main.yml
+++ b/main.yml
@@ -14,6 +14,7 @@
       - simple_standalone
   roles:
       - srcf.trivial-mta
+      - srcf.server
   become: yes
 
 - name: 'SRCF standalone server (no NIS, no private network)'
