Add srcf.hosted role for SRCF-hosted VMs
"SRCF-hosted VMs" is the interim term for VMs provided on SRCF
infrastructure to users/groups of the SRCF.

srcf.hosted currently performs a few steps of useful configuration on
top of srcf.base and srcf.trivial-mta:

  - Create user accounts for 'tenant users' (i.e. not the SRCF's
    operator account), so the user(s) can log in with an SSH key.  Give
    these users root by sudo.

  - Point root's email elsewhere, e.g.  $GROUPNAME-admins@srcf.net.
    This is immediately useful because unattended-upgrades and apticron
    will already be set up to send root email (by the role srcf.base).

--- a/main.yml
+++ b/main.yml
@@ -17,6 +17,16 @@
     - srcf.server
   become: yes
 
+- name: 'SRCF-hosted tenant VMs'
+  tags:
+    - hosted
+  hosts:
+    - hosted
+  roles:
+    - srcf.trivial-mta
+    - srcf.hosted
+  become: yes
+
 - name: 'SRCF standalone server (no NIS, no private network)'
   tags:
     - standalone
